// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`keyrack fill cli given: [case1] any repo when: [t0] rhx keyrack fill --help then: stdout matches snapshot 1`] = `
"Usage: rhachet keyrack fill [options]

fill keyrack keys from repo manifest

Options:
  --env <env>         environment to fill (test, prod, prep, all, sudo, camp)
  --owner <owner...>  owner(s) to fill (default: default) (default: ["default"])
  --prikey <path...>  prikey(s) to consider for manifest decryption
  --key <key>         specific key to fill (default: all)
  --refresh           refresh even if already set
  --repair            overwrite blocked keys (e.g., rotate dangerous tokens)
  --allow-dangerous   allow blocked keys through (e.g., accept dangerous tokens
                      as-is)
  -h, --help          display help for command
"
`;

exports[`keyrack fill cli given: [case4] repo with keyrack manifest (test keys only) when: [t0] rhx keyrack fill --env prod (no prod keys exist) then: stdout matches snapshot 1`] = `
"
🔐 keyrack fill (env: prod)
   └─ no keys found

"
`;

exports[`keyrack fill cli given: [case6] repo with env.test key already set as env=all when: [t0] rhx keyrack fill --env test then: stdout matches snapshot 1`] = `
"
🔐 keyrack fill (env: test, keys: 2, owners: 1)

🔑 key 1/2, FILL_TEST_KEY, for 1 owner
   └─ for owner default
      └─ 🟢 found vaulted under testorg.all.FILL_TEST_KEY

🔑 key 2/2, ANOTHER_TEST_KEY, for 1 owner
   └─ for owner default
      └─ 🟢 found vaulted under testorg.all.ANOTHER_TEST_KEY

🔐 keyrack fill complete (2/2 keys verified)

"
`;

exports[`keyrack fill cli given: [case7] fill prompts for mechanism selection (pseudo-TTY) when: [t0] keyrack fill --env test via pseudo-TTY (prompts for mech) then: stdout matches snapshot 1`] = `
"🔐 keyrack fill (env: test, keys: 1, owners: 1)

🔑 key 1/1, API_KEY, for 1 owner
   └─ for owner default
      ├─ set the key
      │  ├─
      │  │
      │  │  which mechanism?
      │  │  ├─ 1. PERMANENT_VIA_REPLICA — static secret (api key, password)
      │  │  └─ 2. EPHEMERAL_VIA_GITHUB_APP — github app installation (short-lived tokens)
      │  │  choice: 1
      │  │  enter secret for API_KEY: **********************
      │  │
      │  └─
      └─ get after set, to verify
         ├─ ✓ rhx keyrack unlock --key API_KEY --env test --owner default
         └─ ✓ rhx keyrack get --key API_KEY --env test --owner default

🔐 keyrack fill complete (1/1 keys verified)"
`;

exports[`keyrack fill cli given: [case8] repo with keyrack manifest (test keys only), fill camp when: [t0] rhx keyrack fill --env camp (no camp keys exist) then: stdout matches snapshot 1`] = `
"
🔐 keyrack fill (env: camp)
   └─ no keys found

"
`;

exports[`keyrack fill cli given: [case9] a manifest that declares reaches, via the cli when: [t0] keyrack fill --env test via pseudo-TTY then: stderr matches snapshot: stderr 1`] = `""`;

exports[`keyrack fill cli given: [case9] a manifest that declares reaches, via the cli when: [t0] keyrack fill --env test via pseudo-TTY then: stdout matches snapshot: stdout 1`] = `
"🔐 keyrack fill (env: test, keys: 2, owners: 1)

🔑 key 1/2, PLAIN_KEY, for 1 owner
   └─ for owner default
      ├─ set the key
      │  ├─
      │  │
      │  │  which mechanism?
      │  │  ├─ 1. PERMANENT_VIA_REPLICA — static secret (api key, password)
      │  │  └─ 2. EPHEMERAL_VIA_GITHUB_APP — github app installation (short-lived tokens)
      │  │  choice: 1
      │  │  enter secret for PLAIN_KEY: ************
      │  │
      │  └─
      └─ get after set, to verify
         ├─ ✓ rhx keyrack unlock --key PLAIN_KEY --env test --owner default
         └─ ✓ rhx keyrack get --key PLAIN_KEY --env test --owner default

🔑 key 2/2, MULTI_REACH_KEY, for 1 owner
   └─ for owner default
      ├─ at reach default
      │  ├─ set the key
      │  │  ├─
      │  │  │
      │  │  │  which mechanism?
      │  │  │  ├─ 1. PERMANENT_VIA_REPLICA — static secret (api key, password)
      │  │  │  └─ 2. EPHEMERAL_VIA_GITHUB_APP — github app installation (short-lived tokens)
      │  │  │  choice: 1
      │  │  │  enter secret for MULTI_REACH_KEY: **********************
      │  │  │
      │  │  └─
      │  └─ get after set, to verify
      │     ├─ ✓ rhx keyrack unlock --key MULTI_REACH_KEY --env test --owner default
      │     └─ ✓ rhx keyrack get --key MULTI_REACH_KEY --env test --owner default
      ├─ at reach beav@ehmpathy.com
      │  ├─ set the key
      │  │  ├─
      │  │  │
      │  │  │  which mechanism?
      │  │  │  ├─ 1. PERMANENT_VIA_REPLICA — static secret (api key, password)
      │  │  │  └─ 2. EPHEMERAL_VIA_GITHUB_APP — github app installation (short-lived tokens)
      │  │  │  choice: 1
      │  │  │  enter secret for MULTI_REACH_KEY: ***************
      │  │  │
      │  │  └─
      │  └─ get after set, to verify
      │     ├─ ✓ rhx keyrack unlock --key MULTI_REACH_KEY --env test --owner default --reach beav@ehmpathy.com
      │     └─ ✓ rhx keyrack get --key MULTI_REACH_KEY --env test --owner default --reach beav@ehmpathy.com
      └─ at reach vlad@ehmpathy.com
         ├─ set the key
         │  ├─
         │  │
         │  │  which mechanism?
         │  │  ├─ 1. PERMANENT_VIA_REPLICA — static secret (api key, password)
         │  │  └─ 2. EPHEMERAL_VIA_GITHUB_APP — github app installation (short-lived tokens)
         │  │  choice: 1
         │  │  enter secret for MULTI_REACH_KEY: ***************
         │  │
         │  └─
         └─ get after set, to verify
            ├─ ✓ rhx keyrack unlock --key MULTI_REACH_KEY --env test --owner default --reach vlad@ehmpathy.com
            └─ ✓ rhx keyrack get --key MULTI_REACH_KEY --env test --owner default --reach vlad@ehmpathy.com

🔐 keyrack fill complete (4/4 keys verified)"
`;

exports[`keyrack fill cli given: [case10] the LAST declared reach cannot be provisioned when: [t0] the human fumbles the prompt on the last reach then: stderr matches snapshot: stderr 1`] = `""`;

exports[`keyrack fill cli given: [case10] the LAST declared reach cannot be provisioned when: [t0] the human fumbles the prompt on the last reach then: stdout matches snapshot: stdout 1`] = `
"🔐 keyrack fill (env: test, keys: 2, owners: 1)

🔑 key 1/2, PLAIN_KEY, for 1 owner
   └─ for owner default
      ├─ set the key
      │  ├─
      │  │
      │  │  which mechanism?
      │  │  ├─ 1. PERMANENT_VIA_REPLICA — static secret (api key, password)
      │  │  └─ 2. EPHEMERAL_VIA_GITHUB_APP — github app installation (short-lived tokens)
      │  │  choice: 1
      │  │  enter secret for PLAIN_KEY: ************
      │  │
      │  └─
      └─ get after set, to verify
         ├─ ✓ rhx keyrack unlock --key PLAIN_KEY --env test --owner default
         └─ ✓ rhx keyrack get --key PLAIN_KEY --env test --owner default

🔑 key 2/2, MULTI_REACH_KEY, for 1 owner
   └─ for owner default
      ├─ at reach default
      │  ├─ set the key
      │  │  ├─
      │  │  │
      │  │  │  which mechanism?
      │  │  │  ├─ 1. PERMANENT_VIA_REPLICA — static secret (api key, password)
      │  │  │  └─ 2. EPHEMERAL_VIA_GITHUB_APP — github app installation (short-lived tokens)
      │  │  │  choice: 1
      │  │  │  enter secret for MULTI_REACH_KEY: **********************
      │  │  │
      │  │  └─
      │  └─ get after set, to verify
      │     ├─ ✓ rhx keyrack unlock --key MULTI_REACH_KEY --env test --owner default
      │     └─ ✓ rhx keyrack get --key MULTI_REACH_KEY --env test --owner default
      ├─ at reach beav@ehmpathy.com
      │  ├─ set the key
      │  │  ├─
      │  │  │
      │  │  │  which mechanism?
      │  │  │  ├─ 1. PERMANENT_VIA_REPLICA — static secret (api key, password)
      │  │  │  └─ 2. EPHEMERAL_VIA_GITHUB_APP — github app installation (short-lived tokens)
      │  │  │  choice: 1
      │  │  │  enter secret for MULTI_REACH_KEY: ***************
      │  │  │
      │  │  └─
      │  └─ get after set, to verify
      │     ├─ ✓ rhx keyrack unlock --key MULTI_REACH_KEY --env test --owner default --reach beav@ehmpathy.com
      │     └─ ✓ rhx keyrack get --key MULTI_REACH_KEY --env test --owner default --reach beav@ehmpathy.com
      └─ at reach vlad@ehmpathy.com
         ├─ set the key
         │  ├─
         │  │
         │  │  which mechanism?
         │  │  ├─ 1. PERMANENT_VIA_REPLICA — static secret (api key, password)
         │  │  └─ 2. EPHEMERAL_VIA_GITHUB_APP — github app installation (short-lived tokens)
         │  │  choice: 9
         │  │
         │  └─

🔐 keyrack fill
   └─ ✋ blocked: invalid mechanism choice
      └─ hint: enter a number between 1 and 2"
`;

exports[`keyrack fill cli given: [case11] the FIRST declared reach cannot be provisioned when: [t0] the human fumbles the prompt on the first reach then: stderr matches snapshot: stderr 1`] = `""`;

exports[`keyrack fill cli given: [case11] the FIRST declared reach cannot be provisioned when: [t0] the human fumbles the prompt on the first reach then: stdout matches snapshot: stdout 1`] = `
"🔐 keyrack fill (env: test, keys: 2, owners: 1)

🔑 key 1/2, PLAIN_KEY, for 1 owner
   └─ for owner default
      ├─ set the key
      │  ├─
      │  │
      │  │  which mechanism?
      │  │  ├─ 1. PERMANENT_VIA_REPLICA — static secret (api key, password)
      │  │  └─ 2. EPHEMERAL_VIA_GITHUB_APP — github app installation (short-lived tokens)
      │  │  choice: 1
      │  │  enter secret for PLAIN_KEY: ************
      │  │
      │  └─
      └─ get after set, to verify
         ├─ ✓ rhx keyrack unlock --key PLAIN_KEY --env test --owner default
         └─ ✓ rhx keyrack get --key PLAIN_KEY --env test --owner default

🔑 key 2/2, MULTI_REACH_KEY, for 1 owner
   └─ for owner default
      ├─ at reach default
      │  ├─ set the key
      │  │  ├─
      │  │  │
      │  │  │  which mechanism?
      │  │  │  ├─ 1. PERMANENT_VIA_REPLICA — static secret (api key, password)
      │  │  │  └─ 2. EPHEMERAL_VIA_GITHUB_APP — github app installation (short-lived tokens)
      │  │  │  choice: 1
      │  │  │  enter secret for MULTI_REACH_KEY: **********************
      │  │  │
      │  │  └─
      │  └─ get after set, to verify
      │     ├─ ✓ rhx keyrack unlock --key MULTI_REACH_KEY --env test --owner default
      │     └─ ✓ rhx keyrack get --key MULTI_REACH_KEY --env test --owner default
      ├─ at reach beav@ehmpathy.com
      │  ├─ set the key
      │  │  ├─
      │  │  │
      │  │  │  which mechanism?
      │  │  │  ├─ 1. PERMANENT_VIA_REPLICA — static secret (api key, password)
      │  │  │  └─ 2. EPHEMERAL_VIA_GITHUB_APP — github app installation (short-lived tokens)
      │  │  │  choice: 9
      │  │  │
      │  │  └─

🔐 keyrack fill
   └─ ✋ blocked: invalid mechanism choice
      └─ hint: enter a number between 1 and 2"
`;
